added a few more characters

--- a/characters/bigbeauty.html
+++ b/characters/bigbeauty.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">精明</span>: During your draw phase, draw three cards instead of two.</li>
-						<li><span class="red">愛情</span>: During your action phase, flip open your identity card to burn away two black messages.</li>
+						<li><span class="red">愛情</span>: During your action phase, you may flip open your identity card to burn away two black messages.</li>
 					</ul>
 			</div>
 		</div>
