--- a/characters/magnum.html
+++ b/characters/magnum.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Phantom</title>
+        <title>Magnum</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,29 +22,24 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/Phantom.png"/>
+				<img src="../img/Magnum.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Phantom</h2>
+				<h2>Magnum</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>When you die, reveal your hand. If your hand contains three or more red cards, you win.</li>
+						<li>Collect three or more red messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">就計</span>: If a player uses a Test card or a Lock-On card on you, you may flip up this card and draw two cards from the library.</li>
-						<li><span class="red">城府</span>: When you are being Tested, you can conceal your identity. Basically, you can choose to execute any of the options listed on the Test card, regardless of your real identity.</li>
-						<li><span class="red">遺志</span>: When you die, you can give all of the cards in your hand face down to another player. That player then randomly selects three cards from those face down cards and adds them to his message board.</li>
-					</ul>
-				<p>Cultural Notes</p>
-					<ul>
-						<li>Phantom's third ability, 遺志, rougly translates to "deathbed wish".</li>
+						<li><span class="blue">就計</span>: If a player uses a Test card or a Lock-On card on you, you may flip up this character card and draw two cards from the library.</li>
+						<li><span class="red">合謀</span>: During your action phase, you may flip down this character card. If you do, select another player. You and that player look at each other's identity cards.</li>
 					</ul>
 			</div>
 		</div>
