--- a/characters/oldgold.html
+++ b/characters/oldgold.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Phantom</title>
+        <title>Old Gold</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,29 +22,29 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/Phantom.png"/>
+				<img src="../img/OldGold.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Phantom</h2>
+				<h2>Old Gold</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>When you die, reveal your hand. If your hand contains three or more red cards, you win.</li>
+						<li>Your hand contains exactly three red cards and three blue cards.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">就計</span>: If a player uses a Test card or a Lock-On card on you, you may flip up this card and draw two cards from the library.</li>
-						<li><span class="red">城府</span>: When you are being Tested, you can conceal your identity. Basically, you can choose to execute any of the options listed on the Test card, regardless of your real identity.</li>
-						<li><span class="red">遺志</span>: When you die, you can give all of the cards in your hand face down to another player. That player then randomly selects three cards from those face down cards and adds them to his message board.</li>
+						<li><span class="blue">棄卒保帥</span>: When your action card is Canceled, you may flip up this character card. If you do, draw five cards, and then place two cards from your hand in any order onto the top of the library.</li>
+						<li><span class="red">釜底抽薪</span>: When you receive a fake message, you may place another fake message onto your own board. If you do, flip down this character card, and place one message onto any player's board.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
-						<li>Phantom's third ability, 遺志, rougly translates to "deathbed wish".</li>
+						<li>Old Gold's first ability, 棄卒保帥, is a move in chess where one's pawn is sacrificed in order to save the queen.</li>
+						<li>Old Gold's second ability, 釜底抽薪, is the Nineteenth Strategem of The Thirty-Six Strategems of the Art of War, an essay written by Tan DaoJi that illustrated a series of strategems used in politics, wars, and civil interactions. 釜底抽薪 roughly translates to "taking drastic measures to deal with a situation".</li>
 					</ul>
 			</div>
 		</div>
