--- a/characters/emeigale.html
+++ b/characters/emeigale.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Phantom</title>
+        <title>Emei Gale</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,29 +22,24 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/Phantom.png"/>
+				<img src="../img/EmeiGale.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Phantom</h2>
+				<h2>Emei Gale</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>When you die, reveal your hand. If your hand contains three or more red cards, you win.</li>
+						<li>Collect three or more blue messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">就計</span>: If a player uses a Test card or a Lock-On card on you, you may flip up this card and draw two cards from the library.</li>
-						<li><span class="red">城府</span>: When you are being Tested, you can conceal your identity. Basically, you can choose to execute any of the options listed on the Test card, regardless of your real identity.</li>
-						<li><span class="red">遺志</span>: When you die, you can give all of the cards in your hand face down to another player. That player then randomly selects three cards from those face down cards and adds them to his message board.</li>
-					</ul>
-				<p>Cultural Notes</p>
-					<ul>
-						<li>Phantom's third ability, 遺志, rougly translates to "deathbed wish".</li>
+						<li><span class="blue">截上截</span>: When a message is being transmitted during another player's turn, you may flip up this character card. If you do, take the transmitted message and place it onto your message board.</li>
+						<li><span class="red">計中計</span>: Whenever a player (including yourself) receives a red or blue message you transmitted, you may burn one black message from that player's board.</li>
 					</ul>
 			</div>
 		</div>
