put dropdown back in

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <div class="center">
                         <h2 class="silver">Characters</h2>
-                        <!--
+                        
                         <div class="filterOption">
                             <label class="white">Gender</label><br>
                             <select name="gender">
@@ -53,7 +53,7 @@
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
                             </select>
-                        </div>-->
+                        </div>
 
                         <div>
                             <input type="button" value="Filter" onClick="filterCards()" />
