added three more characters

--- a/characters/brotherpony.html
+++ b/characters/brotherpony.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Brother Pony</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,22 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/BrotherPony.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Brother Pony</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains four Lock-On cards.</li>
+						<li>One Red player and one Blue player must die (You do not have to personally kill them).</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.</li>
+						<li><span class="red">英雄本色</span>: Whenever you receive a transmitted black message, draw two cards. You may then also place one black message onto any player's message board.</li>
 					</ul>
 			</div>
 		</div>
