--- a/characters/codebreaker.html
+++ b/characters/codebreaker.html
@@ -39,7 +39,7 @@
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
 						<li><span class="blue">速譯</span>: While a message is being transmitted, you may flip up this card to peek at the message and draw one card from the library.</li>
-						<li><span class="red">洞悉</span>: Whenever a player plays a Peek card, you may flip down this card.
+						<li><span class="red">洞悉</span>: Whenever a player plays a Peek card, you may flip down this card.</li>
 					</ul>
 			</div>
 		</div>
