--- a/characters/fuping.html
+++ b/characters/fuping.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Fu Ping</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,24 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/FuPing.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Fu Ping</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains four Lock-On cards.</li>
+						<li>Be the second player or thereafter to die.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.</li>
+						<li><span class="blue">先機</span>: Flip up this character card. If you do, take two cards from another player's hand. That player then draws one card from the library.</li>
+						<li><span class="red">後著</span>: When you die, you may look through another player's hand and select one card to place onto a player's message board.</li>
 					</ul>
 			</div>
 		</div>
