--- a/characters/goldfinch.html
+++ b/characters/goldfinch.html
@@ -39,7 +39,7 @@
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
 						<li><span class="blue">潛藏伏擊</span>: During your action phase, you may flip up this card to return one other player's message to the top of the library.</li>
-						<li><span class="red">黃雀在後</span>: When another player dies, draw a card. You may also flip open and reveal your identity card; if you do, place up to two black messages from your hand onto one player's board.
+						<li><span class="red">黃雀在後</span>: When another player dies, draw a card. You may also flip open and reveal your identity card; if you do, place up to two black messages from your hand onto one player's board.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
