--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                         <div class="col-md-2 card male concealed">
                             <a href="characters/magnum.html"><img src="img/Magnum.png"/></a>
                         </div>
+                        <div class="col-md-2 card male open">
+                            <a href="characters/brotherpony.html"><img src="img/BrotherPony.png"/></a>
+                        </div>
+                        <div class="col-md-2 card male open">
+                            <a href="characters/strangethief99.html"><img src="img/StrangeThief99.png"/></a>
+                        </div>
+                        <div class="col-md-2 card female concealed">
+                            <a href="characters/fuping.html"><img src="img/FuPing.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -200,6 +209,15 @@
                         </div>
                         <div class="small-card male concealed">
                             <a href="characters/magnum.html"><img src="img/Magnum.png"/></a>
+                        </div>
+                        <div class="small-card male open">
+                            <a href="characters/brotherpony.html"><img src="img/BrotherPony.png"/></a>
+                        </div>
+                        <div class="small-card male open">
+                            <a href="characters/strangethief99.html"><img src="img/StrangeThief99.png"/></a>
+                        </div>
+                        <div class="small-card female concealed">
+                            <a href="characters/fuping.html"><img src="img/FuPing.png"/></a>
                         </div>
                     </div>
                 </div>
