--- a/characters/strangethief99.html
+++ b/characters/strangethief99.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Strange Thief 99</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/StrangeThief99.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Strange Thief 99</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains four Lock-On cards.</li>
+						<li>Your hand contains ten or more cards.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.</li>
+						<li><span class="red">陰謀</span>: Whenever a player receives a fake message you sent out, you may take a card from any one player's hand.</li>
+						<li><span class="red">陽謀</span>: Whenever you receive a black message sent out from another player, you may take a card from any one player's hand.</li>
 					</ul>
 			</div>
 		</div>
