added bottom padding to the filters

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <div class="row filterOption">
                             <form name="filterForm">
-                                <div class="col-md-6 center">
+                                <div class="col-md-6 center filter">
                                     <label class="white">Gender:</label>
                                     <select name="gender" onchange="filterCards()">
                                         <option value="allGenders">All</option>
@@ -59,7 +59,7 @@
                                     </select>
                                 </div>
 
-                                <div class="col-md-6 center">
+                                <div class="col-md-6 center filter">
                                     <label class="white">Concealment:</label>              
                                     <select name="concealed" onchange="filterCards()">
                                         <option value="allTypes">All</option>
