--- a/index.html
+++ b/index.html
@@ -50,23 +50,25 @@
 
                     <div class="row filterOption">
                             <form name="filterForm">
+
                                 <div class="col-md-6 center filter">
-                                    <label class="white">Gender:</label>
-                                    <select name="gender" onchange="filterCards()">
-                                        <option value="allGenders">All</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
-                                    </select>
+                                    <label class="white">Gender:</label><br>
+                                    <input type="checkbox" id="maleCheckBox" name="maleBox" onclick="filterCards()" checked />
+                                    <label class="white">Male</label>
+
+                                    <input type="checkbox" id="femaleCheckBox" name="femaleBox" onclick="filterCards()" checked />
+                                    <label class="white">Female</label>
                                 </div>
 
                                 <div class="col-md-6 center filter">
-                                    <label class="white">Concealment:</label>              
-                                    <select name="concealed" onchange="filterCards()">
-                                        <option value="allTypes">All</option>
-                                        <option value="open">Open</option>
-                                        <option value="concealed">Hidden</option>
-                                    </select>
+                                    <label class="white">Concealment:</label><br>
+                                    <input type="checkbox" id="openCheckBox" name="openBox" onclick="filterCards()" checked />
+                                    <label class="white">Open</label>
+
+                                    <input type="checkbox" id="concealedCheckBox" name="concealedBox" onclick="filterCards()" checked />
+                                    <label class="white">Hidden</label>
                                 </div>
+
                             </form>
                         </div>
                     </div>
