made checkboxes bigger and colored

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="right" class="col-md-12">
 
                     <div class="center">
-                        <h2 class="silver">Characters</h2>
+                        <h2 class="blue">Characters</h2>
                     </div>
                 
 
@@ -52,16 +52,16 @@
                             <form name="filterForm">
 
                                 <div class="col-md-6 center filter">
-                                    <label class="white">Gender:</label><br>
-                                    <input type="checkbox" id="maleCheckBox" name="maleBox" onclick="filterCards()" checked />
+                                    <label class="silver">Gender:</label><br>
+                                    <input type="checkbox" id="maleCheckBox" name="maleBox" onclick="filterCards()" checked />       
                                     <label class="white">Male</label>
-
+                                 
                                     <input type="checkbox" id="femaleCheckBox" name="femaleBox" onclick="filterCards()" checked />
                                     <label class="white">Female</label>
                                 </div>
 
                                 <div class="col-md-6 center filter">
-                                    <label class="white">Concealment:</label><br>
+                                    <label class="silver">Concealment:</label><br>
                                     <input type="checkbox" id="openCheckBox" name="openBox" onclick="filterCards()" checked />
                                     <label class="white">Open</label>
 
