changed colors of labels

--- a/index.html
+++ b/index.html
@@ -52,21 +52,23 @@
                             <form name="filterForm">
 
                                 <div class="col-md-6 center filter">
-                                    <label class="silver">Gender:</label><br>
+                                    <label class="white">Gender:</label><br>
+                                    
                                     <input type="checkbox" id="maleCheckBox" name="maleBox" onclick="filterCards()" checked />       
-                                    <label class="white">Male</label>
+                                    <label class="silver">Male</label>
                                  
                                     <input type="checkbox" id="femaleCheckBox" name="femaleBox" onclick="filterCards()" checked />
-                                    <label class="white">Female</label>
+                                    <label class="silver">Female</label>
                                 </div>
 
                                 <div class="col-md-6 center filter">
-                                    <label class="silver">Concealment:</label><br>
+                                    <label class="white">Concealment:</label><br>
+
                                     <input type="checkbox" id="openCheckBox" name="openBox" onclick="filterCards()" checked />
-                                    <label class="white">Open</label>
+                                    <label class="silver">Open</label>
 
                                     <input type="checkbox" id="concealedCheckBox" name="concealedBox" onclick="filterCards()" checked />
-                                    <label class="white">Hidden</label>
+                                    <label class="silver">Hidden</label>
                                 </div>
 
                             </form>
