edited characters' cards to be clearer and in line with rules

--- a/characters/shining.html
+++ b/characters/shining.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">狙擊</span>: Flip up this card, and burn away up to three messages from one other player's board.</li>
+						<li><span class="blue">狙擊</span>: Flip up this card anytime, and burn away up to three messages from one other player's board.</li>
 					</ul>
 			</div>
 		</div>
