--- a/characters/spychief.html
+++ b/characters/spychief.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">隔牆有耳</span>: When you test a player, you may draw two cards from the library, and then place one card from your hand onto the top of the library.</li>
-						<li><span class="red">偷龍轉鳳</span>: When a transmitted message reaches you, you may discard one card from your hand to switch the transmitted message with the top card of the library.</li>
+						<li><span class="red">偷龍轉鳳</span>: When a transmitted message reaches you (including your own), you may discard one card from your hand to switch the transmitted message with the top card of the library.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
