clarified more chars, and renamed Fu Ping to Lotus

--- a/characters/blade.html
+++ b/characters/blade.html
@@ -37,7 +37,7 @@
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">亮劍</span>: During your action phase, designate one player to Lock-On to. You may only use this ability once per turn. As this Lock-On is a character ability, it cannot be countered by Cancel cards.</li>
+						<li><span class="red">亮劍</span>: During your action phase, you must designate one player to Lock-On to. You may only use this ability once per turn. As this Lock-On is a character ability, it cannot be countered by Cancel cards.</li>
 						<li><span class="red">嗜血</span>: Whenever a player dies, draw three cards.</li>
 					</ul>
 			</div>
