--- a/characters/emeigale.html
+++ b/characters/emeigale.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">截上截</span>: When a message is being transmitted during another player's turn, you may flip up this character card. If you do, take the transmitted message and place it onto your message board.</li>
+						<li><span class="blue">截上截</span>: When a message is being transmitted during another player's turn, you may flip up this character card. If you do, take the transmitted message and place it onto your message board. This ability may be played even during the message arrival phase.</li>
 						<li><span class="red">計中計</span>: Whenever a player (including yourself) receives a red or blue message you transmitted, you may burn one black message from that player's board.</li>
 					</ul>
 			</div>
