--- a/characters/lotus.html
+++ b/characters/lotus.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fu Ping</title>
+        <title>Lotus</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,7 @@
 			</div>
 
 			<div class="charName">
-				<h2>Fu Ping</h2>
+				<h2>Lotus</h2>
 			</div>
 
 			<div class="explanation">
