--- a/characters/oldgold.html
+++ b/characters/oldgold.html
@@ -39,7 +39,7 @@
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
 						<li><span class="blue">棄卒保帥</span>: When your action card is Canceled, you may flip up this character card. If you do, draw five cards, and then place two cards from your hand in any order onto the top of the library.</li>
-						<li><span class="red">釜底抽薪</span>: When you receive a fake message, you may place another fake message from your hand onto your own board. If you do, flip down this character card, and place one message each from your hand onto the boards of any number of players.</li>
+						<li><span class="red">釜底抽薪</span>: When you receive a fake message, you may place an additional fake message from your hand onto your own board. If you do, flip down this character card, and place one message each onto the boards of any number of players.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
