--- a/characters/phantom.html
+++ b/characters/phantom.html
@@ -40,7 +40,7 @@
 						<li><span class="white">潛伏</span>: Hidden Character</li>
 						<li><span class="blue">就計</span>: If a player uses a Test card or a Lock-On card on you, you may flip up this card and draw two cards from the library.</li>
 						<li><span class="red">城府</span>: When you are being Tested, you can conceal your identity. Basically, you can choose to execute any of the options listed on the Test card, regardless of your real identity.</li>
-						<li><span class="red">遺志</span>: When you die, you can give all of the cards in your hand face down to another player. That player then randomly selects three cards from those face down cards and adds them to his message board.</li>
+						<li><span class="red">遺志</span>: When you die, you may give all of the cards in your hand face down to another player. That player then randomly selects three cards from those face down cards and adds them to his message board.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
