updated links to Lotus from Fu Ping

--- a/characters/lotus.html
+++ b/characters/lotus.html
@@ -22,7 +22,7 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/FuPing.png"/>
+				<img src="../img/Lotus.png"/>
 			</div>
 
 			<div class="charName">
