--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <a href="characters/strangethief99.html"><img src="img/StrangeThief99.png"/></a>
                         </div>
                         <div class="col-md-2 card female concealed">
-                            <a href="characters/fuping.html"><img src="img/FuPing.png"/></a>
+                            <a href="characters/lotus.html"><img src="img/Lotus.png"/></a>
                         </div>
                     </div>
 
@@ -221,7 +221,7 @@
                             <a href="characters/strangethief99.html"><img src="img/StrangeThief99.png"/></a>
                         </div>
                         <div class="small-card female concealed">
-                            <a href="characters/fuping.html"><img src="img/FuPing.png"/></a>
+                            <a href="characters/lotus.html"><img src="img/Lotus.png"/></a>
                         </div>
                     </div>
                 </div>
