added Solid Snake character

--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
                         <div class="col-md-2 card female concealed">
                             <a href="characters/lotus.html"><img src="img/Lotus.png"/></a>
                         </div>
+                        <div class="col-md-2 card male open">
+                            <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
+                        </div>
                     </div>
+
 
                     <div class="visible-xs">
                         <div class="small-card female open">
@@ -222,6 +226,9 @@
                         </div>
                         <div class="small-card female concealed">
                             <a href="characters/lotus.html"><img src="img/Lotus.png"/></a>
+                        </div>
+                        <div class="small-card male open">
+                            <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
                         </div>
                     </div>
                 </div>
