--- a/characters/solidsnake.html
+++ b/characters/solidsnake.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Solid Snake</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/SolidSnake.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Solid Snake</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains exactly four Lock-On cards.</li>
+						<li>If another player declares victory and no players have died, you win instead.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.</li>
+						<li><span class="red">聲東擊西</span>: During message transmission, you may flip down this character card. If you do, act as if you have used a Decoy card.</li>
+						<li><span class="blue">彈藥無限</span>: If you have no cards in your hand, you may flip up this character card. If you do, draw a card from the library.</li>
 					</ul>
 			</div>
 		</div>
