changed checkboxes from green to checks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>The Message Board Game Translation</title>
-        <meta name="description" content="">
+        <meta name="description" content="The Message Board Game Unofficial English Translation">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -55,20 +55,20 @@
                                     <label class="white">Gender:</label><br>
                                     
                                     <input type="checkbox" id="maleCheckBox" name="maleBox" onclick="filterCards()" checked />       
-                                    <label class="silver">Male</label>
+                                    <label class="red">Male</label>
                                  
                                     <input type="checkbox" id="femaleCheckBox" name="femaleBox" onclick="filterCards()" checked />
-                                    <label class="silver">Female</label>
+                                    <label class="red">Female</label>
                                 </div>
 
                                 <div class="col-md-6 center filter">
                                     <label class="white">Concealment:</label><br>
 
                                     <input type="checkbox" id="openCheckBox" name="openBox" onclick="filterCards()" checked />
-                                    <label class="silver">Open</label>
+                                    <label class="red">Open</label>
 
                                     <input type="checkbox" id="concealedCheckBox" name="concealedBox" onclick="filterCards()" checked />
-                                    <label class="silver">Hidden</label>
+                                    <label class="red">Hidden</label>
                                 </div>
 
                             </form>
