added Spy Hunter character

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                         <div class="col-md-2 card male open">
                             <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
                         </div>
+                        <div class="col-md-2 card male hidden">
+                            <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
+                        </div>
                     </div>
 
 
@@ -229,6 +232,9 @@
                         </div>
                         <div class="small-card male open">
                             <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
+                        </div>
+                        <div class="small-card male hidden">
+                            <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
                         </div>
                     </div>
                 </div>
