--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="col-md-2 card male open">
                             <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
                         </div>
-                        <div class="col-md-2 card male hidden">
+                        <div class="col-md-2 card male concealed">
                             <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                         <div class="small-card male open">
                             <a href="characters/solidsnake.html"><img src="img/SolidSnake.png"/></a>
                         </div>
-                        <div class="small-card male hidden">
+                        <div class="small-card male concealed">
                             <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
                         </div>
                     </div>
