added the last 4 expansion characters

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                         </div>
                     </div>
                     
+                    <!-- These Cards are displayed for non-smartphone screens -->
                     <div class="row hidden-xs">
                         <div class="col-md-2 card female open">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
@@ -154,9 +155,21 @@
                         <div class="col-md-2 card male concealed">
                             <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
                         </div>
+                        <div class="col-md-2 card male concealed">
+                            <a href="characters/chairman.html"><img src="img/Chairman.png"/></a>
+                        </div>
+                        <div class="col-md-2 card female concealed">
+                            <a href="characters/bloodpeony.html"><img src="img/BloodPeony.png"/></a>
+                        </div>
+                        <div class="col-md-2 card female open">
+                            <a href="characters/theheiress.html"><img src="img/TheHeiress.png"/></a>
+                        </div>
+                        <div class="col-md-2 card male open">
+                            <a href="characters/shroudeddragon.html"><img src="img/ShroudedDragon.png"/></a>
+                        </div>
                     </div>
 
-
+                    <!-- These Cards are displayed for smartphone screens -->
                     <div class="visible-xs">
                         <div class="small-card female open">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
@@ -235,6 +248,18 @@
                         </div>
                         <div class="small-card male concealed">
                             <a href="characters/spyhunter.html"><img src="img/SpyHunter.png"/></a>
+                        </div>
+                        <div class="small-card male concealed">
+                            <a href="characters/chairman.html"><img src="img/Chairman.png"/></a>
+                        </div>
+                        <div class="small-card female concealed">
+                            <a href="characters/bloodpeony.html"><img src="img/BloodPeony.png"/></a>
+                        </div>
+                        <div class="small-card female open">
+                            <a href="characters/theheiress.html"><img src="img/TheHeiress.png"/></a>
+                        </div>
+                        <div class="small-card male open">
+                            <a href="characters/shroudeddragon.html"><img src="img/ShroudedDragon.png"/></a>
                         </div>
                     </div>
                 </div>
